// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SDK Exports Snapshot > Test Context Structure > should create context with all required properties 1`] = `
[
  "api",
  "config",
  "cwd",
  "host",
  "hostContext",
  "outdir",
  "platform",
  "pluginId",
  "pluginVersion",
  "requestId",
  "runtime",
  "signal",
  "tenantId",
  "trace",
  "ui",
]
`;

exports[`SDK Exports Snapshot > Test Context Structure > should match UI methods snapshot 1`] = `
[
  "box",
  "chain",
  "colors",
  "confirm",
  "debug",
  "divider",
  "error",
  "info",
  "json",
  "log",
  "multiSelect",
  "newline",
  "prompt",
  "select",
  "sideBox",
  "spinner",
  "success",
  "symbols",
  "table",
  "warn",
  "write",
]
`;

exports[`SDK Exports Snapshot > Test Context Structure > should match colors API snapshot 1`] = `
[
  "accent",
  "bold",
  "dim",
  "emphasis",
  "error",
  "foreground",
  "highlight",
  "info",
  "inverse",
  "muted",
  "primary",
  "secondary",
  "success",
  "underline",
  "warning",
]
`;

exports[`SDK Exports Snapshot > Test Context Structure > should match platform services snapshot 1`] = `
[
  "analytics",
  "cache",
  "config",
  "documentDatabase",
  "embeddings",
  "eventBus",
  "invoke",
  "kvStore",
  "llm",
  "logger",
  "logs",
  "storage",
  "vectorStore",
]
`;

exports[`SDK Exports Snapshot > Type Exports > should export core contract types 1`] = `
{
  "hasColorFunction": false,
  "hasColors": false,
  "hasPlatformServices": false,
  "hasPluginAPI": false,
  "hasPluginContextV3": false,
  "hasRuntimeAPI": false,
  "hasUIFacade": false,
}
`;

exports[`SDK Exports Snapshot > should match snapshot of all exported names 1`] = `
[
  "AdapterUnavailableError",
  "DEFAULT_TRANSIENT_RETRY_POLICY",
  "DELETE",
  "FileFeedbackStore",
  "FileHistoryStore",
  "GET",
  "MemoryFeedbackStore",
  "MemoryHistoryStore",
  "MessageBuilder",
  "MessageRouter",
  "PATCH",
  "POST",
  "PUT",
  "PluginError",
  "TimingTracker",
  "buildConfirmationSignal",
  "ciEnvironmentPreset",
  "classifyFailure",
  "cmd",
  "combinePermissions",
  "combinePresets",
  "commonErrors",
  "confirmDestructive",
  "createManifest",
  "createTestContext",
  "createTool",
  "decideRetry",
  "defineAction",
  "defineCommand",
  "defineCommandFlags",
  "defineEnv",
  "defineError",
  "defineEventStream",
  "defineFlags",
  "defineHandler",
  "defineJob",
  "defineManifest",
  "defineMessage",
  "defineRoute",
  "defineWebSocket",
  "defineWebhook",
  "discoverSubRepoPaths",
  "displayArtifacts",
  "displayArtifactsCompact",
  "displaySingleArtifact",
  "errorResult",
  "findRepoRoot",
  "formatCommandHelp",
  "formatError",
  "fullEnvPreset",
  "generateExamples",
  "getAdapterStatus",
  "getAdapterStatusFor",
  "getDegradedStatus",
  "getLLMTier",
  "getMonitoringSnapshot",
  "gitWorkflowPreset",
  "group",
  "handleError",
  "infoResult",
  "isCLIHost",
  "isCacheAvailable",
  "isDocumentDatabaseAvailable",
  "isEmbeddingsAvailable",
  "isKVStoreAvailable",
  "isLLMAvailable",
  "isPlatformConfigured",
  "isRESTHost",
  "isVectorStoreAvailable",
  "isWSHost",
  "isWebhookHost",
  "isWorkflowHost",
  "kbPlatformPreset",
  "llmAccessPreset",
  "mergeCliGroups",
  "metricsList",
  "minimalPreset",
  "npmPublishPreset",
  "parseEnvFromRuntime",
  "presets",
  "renderDestructiveMessage",
  "resolveRuntimeStatePath",
  "rethrowForRest",
  "sectionHeader",
  "sideBorderBox",
  "statusLine",
  "successResult",
  "trackAnalyticsEvent",
  "useAnalytics",
  "useCache",
  "useConfig",
  "useDocumentDatabase",
  "useEmbeddings",
  "useEnv",
  "useKVStore",
  "useLLM",
  "useLoader",
  "useLogger",
  "useLoggerWithContext",
  "usePlatform",
  "useStorage",
  "useVectorStore",
  "validationError",
  "vectorStorePreset",
  "warningResult",
  "webhook",
]
`;

exports[`SDK Exports Snapshot > should match snapshot of exported functions 1`] = `
[
  "AdapterUnavailableError",
  "DELETE",
  "FileFeedbackStore",
  "FileHistoryStore",
  "GET",
  "MemoryFeedbackStore",
  "MemoryHistoryStore",
  "MessageBuilder",
  "MessageRouter",
  "PATCH",
  "POST",
  "PUT",
  "PluginError",
  "TimingTracker",
  "buildConfirmationSignal",
  "classifyFailure",
  "cmd",
  "combinePermissions",
  "combinePresets",
  "confirmDestructive",
  "createManifest",
  "createTestContext",
  "createTool",
  "decideRetry",
  "defineAction",
  "defineCommand",
  "defineCommandFlags",
  "defineEnv",
  "defineError",
  "defineEventStream",
  "defineFlags",
  "defineHandler",
  "defineJob",
  "defineManifest",
  "defineMessage",
  "defineRoute",
  "defineWebSocket",
  "defineWebhook",
  "discoverSubRepoPaths",
  "displayArtifacts",
  "displayArtifactsCompact",
  "displaySingleArtifact",
  "errorResult",
  "findRepoRoot",
  "formatCommandHelp",
  "formatError",
  "generateExamples",
  "getAdapterStatus",
  "getAdapterStatusFor",
  "getDegradedStatus",
  "getLLMTier",
  "getMonitoringSnapshot",
  "group",
  "handleError",
  "infoResult",
  "isCLIHost",
  "isCacheAvailable",
  "isDocumentDatabaseAvailable",
  "isEmbeddingsAvailable",
  "isKVStoreAvailable",
  "isLLMAvailable",
  "isPlatformConfigured",
  "isRESTHost",
  "isVectorStoreAvailable",
  "isWSHost",
  "isWebhookHost",
  "isWorkflowHost",
  "mergeCliGroups",
  "metricsList",
  "parseEnvFromRuntime",
  "renderDestructiveMessage",
  "resolveRuntimeStatePath",
  "rethrowForRest",
  "sectionHeader",
  "sideBorderBox",
  "statusLine",
  "successResult",
  "trackAnalyticsEvent",
  "useAnalytics",
  "useCache",
  "useConfig",
  "useDocumentDatabase",
  "useEmbeddings",
  "useEnv",
  "useKVStore",
  "useLLM",
  "useLoader",
  "useLogger",
  "useLoggerWithContext",
  "usePlatform",
  "useStorage",
  "useVectorStore",
  "validationError",
  "warningResult",
  "webhook",
]
`;
